# zmk

./: DESIGN.md
app/: CMakeLists.txt  Kconfig
app/drivers/: CMakeLists.txt
app/dts/: behaviors.dtsi
app/dts/behaviors/: animation.dtsi  backlight.dtsi  bluetooth.dtsi  caps_word.dtsi  ext_power.dtsi  gresc.dtsi  key_press.dtsi  key_repeat.dtsi  key_toggle.dtsi  layer_tap.dtsi  macros.dtsi  mod_tap.dtsi  momentary_layer.dtsi  none.dtsi  outputs.dtsi  reset.dtsi  rgb_underglow.dtsi  sensor_rotate_key_press.dtsi  sticky_key.dtsi  to_layer.dtsi  toggle_layer.dtsi  transparent.dtsi
app/dts/bindings/: zmk,animation.yaml
app/dts/bindings/animations/: zmk,animation-indicator.yaml
app/dts/bindings/behaviors/: one_param.yaml  two_param.yaml  zero_param.yaml
app/include/drivers/: animation.h
app/include/dt-bindings/zmk/: behavior_id.h  hid_usage.h  hid_usage_pages.h
app/include/zmk/: animation.h  behavior.h  config.h  hid.h  keymap.h  settings.h
app/include/zmk/animation/: animation_control.h
app/include/zmk/events/: usb_feature_report.h
app/module/drivers/: CMakeLists.txt
app/src/: endpoints.c  hid.c  keymap.c  main.c  usb_hid.c  watchdog.c
app/src/animation/: CMakeLists.txt  animation.c  animation_compose.c  animation_control.c  animation_indicator.c  animation_ripple.c  animation_solid.c  color.c
app/src/behaviors/: behavior_animation.c
app/src/events/: usb_feature_report.c
app/src/settings/: CMakeLists.txt  config.c  settings.c  settings.cddl  settings_cdc_acm.c
